--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -1,3 +1,29 @@
 .Pokecard {
-    border: 2px solid mediumseagreen;
+    width: 300px;
+    padding: 10px;
+    margin: 1rem;
+    box-shadow: 7px 10px 12px -5px rgba(0,0,0,0.56);
+    text-align: center;
+    background-color: white;
+    border-radius: 3px;
 }
+
+.Pokecard-image {
+    background-color: #eceff1;
+    height: 250px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    margin-bottom: 1rem;
+}
+
+.Pokecard img {
+    transition: all ease 500ms;
+}
+
+.Pokecard img:hover {
+    transform: scale(1.25);
+    opacity: 0.8;
+}
+
